Practically-a-rewrite nearly complete.